--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
-    - uses: subosito/flutter-action@v1
+    - uses: ChathurangaSandun/flutter-action@v1
       with:
         flutter-version: '1.7.8+hotfix.4'
     - run: flutter pub get
