--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
     - name: Create a Release APK
       uses: ChathurangaSandun/release-action@v1
       with:
+        args: build apk --release
         artifacts: "build/app/outputs/apk/debug/*.apk"
         token: ${{ secrets.TOKEN }}
