--- a/.travis.yml
+++ b/.travis.yml
@@ -1,110 +1,64 @@
-# language: generic
-# dist: xenial
-# addons:
-#   apt:
-#     packages:
-#       - lib32stdc++6
-# env:
-#   global:
-#     - FLUTTER_CHANNEL=stable
-# install:
-#   - git clone https://github.com/flutter/flutter.git -b $FLUTTER_CHANNEL
-#   - export PATH="$PATH:`pwd`/flutter/bin/cache/dart-sdk/bin"
-#   - export PATH="$PATH:`pwd`/flutter/bin"
-#   - flutter doctor -v
-#   - flutter packages get
-
-# static_analysis: &static_analysis
-#   name: "Static analysis"
-#   script: flutter analyze --no-current-package $TRAVIS_BUILD_DIR/lib
-# unit_tests: &unit_tests
-#   name: "Unit tests"
-#   script: flutter test --coverage test/unit_test.dart
-#   after_script: bash <(curl -s https://codecov.io/bash) -f coverage/lcov.info
-# widget_tests: &widget_tests
-#   name: "Widget tests"
-#   script: flutter test --coverage test/widget_test.dart
-#   after_script: bash <(curl -s https://codecov.io/bash) -f coverage/lcov.info
-# integration_tests: &integration_tests
-#   name: "Integration tests"
-#   script: flutter drive --target=test_driver/main.dart
-
-# build: &build
-#   name: "Build APK"
-#   language: android
-#   jdk:
-#     - oraclejdk8
-#   android:
-#     components:
-#       - tools
-#       - tools # See (https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
-#       - platform-tools
-#       - build-tools-28.0.3
-#       - android-27 # Breaks the build if not present (https://github.com/flutter/flutter/pull/26798#issuecomment-455758159)
-#       - android-28
-#   before_script:
-#     - export BUILD_NAME=$TRAVIS_TAG
-#     - export BUILD_NUMBER=$TRAVIS_BUILD_NUMBER
-#   script:
-#     - if [[ $TRAVIS_TAG == "" ]]; then flutter build apk; else flutter build apk --build-name $BUILD_NAME --build-number $BUILD_NUMBER; fi
-#   deploy:
-#     - provider: releases
-#       api_key: $GITHUB_TOKEN
-#       file: build/app/outputs/apk/release/app-release.apk
-#       skip_cleanup: true
-#       name: $TRAVIS_TAG
-#       on:
-#         tags: true
-#   after_deploy:
-#     - git branch $TRAVIS_TAG
-#     - git push https://$GITHUB_TOKEN@github.com/$TRAVIS_REPO_SLUG.git $TRAVIS_TAG
-
-# google_play: &google_play
-#   name: "Google Play"
-#   install:
-#     - bundle install --retry=3 --gemfile=android/Gemfile
-#     - echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > $TRAVIS_BUILD_DIR/android/app/key.jks
-#   before_script:
-#     - chmod +x get_build_artifacts.sh
-#     - export TRACK=$TRAVIS_BRANCH
-#     - if [[ $TRAVIS_BRANCH == "prod" ]]; then export TRACK=production; fi
-#     - mkdir -p "$TRAVIS_BUILD_DIR/build/app/outputs/apk/release" && cd "$_"
-#     - $TRAVIS_BUILD_DIR/get_build_artifacts.sh
-#     - cd $TRAVIS_BUILD_DIR/android
-#   script:
-#     - if [[ $TRAVIS_PULL_REQUEST_BRANCH == beta || $TRAVIS_PULL_REQUEST_BRANCH = alpha || $TRAVIS_PULL_REQUEST_BRANCH = internal ]]; then
-#         bundle exec fastlane promote;
-#       else
-#         bundle exec fastlane release;
-#       fi
-
-# jobs:
-#   allow_failures:
-#     - env: FLUTTER_CHANNEL=beta
-#   include:
-#   - <<: *static_analysis
-#   - <<: *unit_tests
-#   - <<: *widget_tests
-#   - <<: *integration_tests
-#   - <<: *static_analysis
-#     env: FLUTTER_CHANNEL=beta
-#   - <<: *unit_tests
-#     env: FLUTTER_CHANNEL=beta
-#   - <<: *widget_tests
-#     env: FLUTTER_CHANNEL=beta
-#   - <<: *integration_tests
-#     env: FLUTTER_CHANNEL=beta
-#   - stage: build
-#     <<: *build
-#   - stage: deploy
-#     <<: *google_play
-# stages:
-# - name: test
-#   if: (NOT branch =~ /^\d*\.\d*\.\d*$/) OR (NOT branch IN (internal, alpha, beta, prod))
-# - name: build
-#   if: (NOT branch =~ /^\d*\.\d*\.\d*$/) OR (NOT branch IN (internal, alpha, beta, prod))
-# - name: deploy
-#   if: (type = push) AND (branch IN (internal, alpha, beta, prod))
-# cache:
-#   directories:
-#   - $HOME/.pub-cache
+os: linux
+dist: trusty
+jdk: oraclejdk8
+language: node_js
+node_js:
+- '12'
+env:
+  global:
+  - ANDROID_SDK_ROOT=/opt/android
+sudo: required
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - lib32stdc++6
+    - libstdc++6
+    - curl
+before_install:
+- openssl aes-256-cbc -K $encrypted_21e255cdad77_key -iv $encrypted_21e255cdad77_iv
+  -in key.jks.enc -out /home/travis/key.jks -d
+- "./.travis/0_translations.sh"
+- "./.travis/10_prebuild.sh $WEBHOOK_URL"
+- "./.travis/20_generate_kstore_config.sh $STORE_PASSWORD $KEY_PASSWORD $KEY_ALIAS > `pwd`/android/key.properties"
+- "./.travis/25_set_build_state.sh $TRAVIS_BUILD_NUMBER > `pwd`/assets/state/dev.json"
+before_script:
+- wget https://services.gradle.org/distributions/gradle-4.10.3-bin.zip
+- unzip -qq gradle-4.10.3-bin.zip
+- export GRADLE_HOME=`pwd`/gradle-4.10.3
+- export PATH=$GRADLE_HOME/bin:$PATH
+- mkdir -p /home/travis/.android
+- echo 'count=0' > /home/travis/.android/repositories.cfg
+- wget https://dl.google.com/android/repository/sdk-tools-linux-4333796.zip
+- mkdir android-sdk-tools
+- unzip -qq sdk-tools-linux-4333796.zip -d android-sdk-tools
+- export PATH=`pwd`/android-sdk-tools/tools/bin:$PATH
+- mkdir -p $ANDROID_SDK_ROOT
+- yes | sdkmanager --sdk_root=$ANDROID_SDK_ROOT "tools" "build-tools;28.0.3" "extras;android;m2repository"
+  > /dev/null
+- export PATH=${ANDROID_SDK_ROOT}/tools/bin:$PATH
+- sdkmanager --list
+- git clone https://github.com/flutter/flutter.git -b stable --depth 1
+- export PATH=`pwd`/flutter/bin:`pwd`/flutter/bin/cache/dart-sdk/bin:$PATH
+- mkdir -p `pwd`/lib/vendor/dist/
+- yes | cp -rf ./.travis/config/build.gradle ./android/app/build.gradle
+- "./.travis/30_generate_vendor_config.sh $TMDB_KEY $TRAKT_ID $TRAKT_SECRET $CLAWS_URL_BETA
+  $CLAWS_KEY_BETA $VENDOR_NAME $TRAVIS_BUILD_NUMBER > `pwd`/lib/vendor/dist/OfficialVendorConfiguration.dart"
+script:
+- flutter doctor -v
+- "./flutter/bin/flutter build apk"
+after_success:
+- export AUTHOR_NAME=`git log -1 "$TRAVIS_COMMIT" --pretty="%aN"`
+- export COMMITTER_NAME=`git log -1 "$TRAVIS_COMMIT" --pretty="%cN"`
+- export COMMIT_SUBJECT=`git log -1 "$TRAVIS_COMMIT" --pretty="%s"`
+- export COMMIT_MESSAGE=`git log -1 "$TRAVIS_COMMIT" --pretty="%b"`
+- npm install --save axios form-data
+- export BUILD_OUTPUT_URL=`node ./.travis/utils/runUploadHouston.js`
+- "./.travis/40_postbuild.sh success $WEBHOOK_URL $BUILD_OUTPUT_URL"
+after_failure:
+- "./.travis/40_postbuild.sh failure $WEBHOOK_URL"
+cache:
+  directories:
+  - "$HOME/.pub-cache"
+  - node_modules
